--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
    <head>
       <title>Plugin Example</title>
+     <script src="jquery.linkIt.js"></script>
+      <script>
+            $(document.ready(function() {
+                $("span").linkIt();
+             });
+      </script>
   </head>
   <body>
      <h1>LinkIt Demo</h1>
