Added jquery cdn

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
    <head>
       <title>Plugin Example</title>
-     <script src="jquery.linkIt.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+      <script src="jquery.linkIt.js"></script>
       <script>
             $(document.ready(function() {
                 $("span").linkIt();
