added plugin js

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
       <script src="jquery.linkIt.js"></script>
       <script>
-            $(document.ready(function() {
-                $("span").linkIt();
+            $(document).ready(function() {
+                $("span").linkIt({
+                    href: "http://yahoo.com"
+                 });
              });
       </script>
   </head>
