--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
       <script>
             $(document).ready(function() {
                 $("span").linkIt({
-                    href: "http://yahoo.com"
+                    href: "http://yahoo.com",
+                    text: "Click Me",
+                    target: "_blank"
                  });
              });
       </script>
